@@ -5,6 +5,7 @@ import java.util.List;
 import javax.swing.JTextField;
 
 import net.miginfocom.swing.MigLayout;
+import ch.infbr5.sentinel.client.gui.util.ColorChooserLabel;
 import ch.infbr5.sentinel.client.util.ServiceHelper;
 import ch.infbr5.sentinel.client.wsgen.ConfigurationResponse;
 import ch.infbr5.sentinel.client.wsgen.EinheitDetails;
@@ -72,10 +73,13 @@ public class EinheitenConfigPanel extends AbstractAdminOverviewPanel<EinheitDeta
    public class MyDetailPanel extends AbstractAdminDetailPanel<EinheitDetails> {
 
       private static final long serialVersionUID = 1L;
+
       private final JTextField fieldName;
-      private final JTextField fieldRgbColorGsVb;
-      private final JTextField fieldRgbColorTrpK;
-      private final JTextField fieldRgbColorEinh;
+
+      private final ColorChooserLabel fieldRgbColorGsVb;
+      private final ColorChooserLabel fieldRgbColorTrpK;
+      private final ColorChooserLabel fieldRgbColorEinh;
+
       private final JTextField fieldTextGsVb;
       private final JTextField fieldTextTrpK;
       private final JTextField fieldTextEinh;
@@ -83,12 +87,14 @@ public class EinheitenConfigPanel extends AbstractAdminOverviewPanel<EinheitDeta
       public MyDetailPanel() {
          setLayout(new MigLayout("inset 20"));
 
-         SwingHelper.addSeparator(this, "Titel");
+         SwingHelper.addSeparator(this, "Einheit");
 
          fieldName = createField("Name");
-         fieldRgbColorGsVb = createField("RGB Farbe Gs Vb");
-         fieldRgbColorTrpK = createField("RGB Farbe Trp K");
-         fieldRgbColorEinh = createField("RGB Farbe Einh");
+
+         fieldRgbColorGsVb = createColorChooser("Farbe Gs Vb");
+         fieldRgbColorTrpK = createColorChooser("Farbe Trp K");
+         fieldRgbColorEinh = createColorChooser("Farbe Einh");
+
          fieldTextGsVb = createField("Text Gs Vb");
          fieldTextTrpK = createField("Text Trp K");
          fieldTextEinh = createField("Text Einh");
@@ -97,9 +103,11 @@ public class EinheitenConfigPanel extends AbstractAdminOverviewPanel<EinheitDeta
       @Override
       public void getFieldValues() {
          data.setName(fieldName.getText());
-         data.setRgbColorGsVb(fieldRgbColorGsVb.getText());
-         data.setRgbColorTrpK(fieldRgbColorTrpK.getText());
-         data.setRgbColorEinh(fieldRgbColorEinh.getText());
+
+         data.setRgbColorGsVb(fieldRgbColorGsVb.getBackgroundHtmlColor());
+         data.setRgbColorTrpK(fieldRgbColorTrpK.getBackgroundHtmlColor());
+         data.setRgbColorEinh(fieldRgbColorEinh.getBackgroundHtmlColor());
+
          data.setTextGsVb(fieldTextGsVb.getText());
          data.setTextTrpK(fieldTextTrpK.getText());
          data.setTextEinh(fieldTextEinh.getText());
@@ -108,9 +116,11 @@ public class EinheitenConfigPanel extends AbstractAdminOverviewPanel<EinheitDeta
       @Override
       public void setFieldValues() {
          fieldName.setText(data.getName());
-         fieldRgbColorGsVb.setText(data.getRgbColorGsVb());
-         fieldRgbColorTrpK.setText(data.getRgbColorTrpK());
-         fieldRgbColorEinh.setText(data.getRgbColorEinh());
+
+         fieldRgbColorGsVb.setBackgroundHtmlColor(data.getRgbColorGsVb());
+         fieldRgbColorTrpK.setBackgroundHtmlColor(data.getRgbColorTrpK());
+         fieldRgbColorEinh.setBackgroundHtmlColor(data.getRgbColorEinh());
+
          fieldTextGsVb.setText(data.getTextGsVb());
          fieldTextTrpK.setText(data.getTextTrpK());
          fieldTextEinh.setText(data.getTextEinh());
@@ -119,9 +129,11 @@ public class EinheitenConfigPanel extends AbstractAdminOverviewPanel<EinheitDeta
       @Override
       public void clearFieldValues() {
          fieldName.setText("");
-         fieldRgbColorGsVb.setText("");
-         fieldRgbColorTrpK.setText("");
-         fieldRgbColorEinh.setText("");
+
+         fieldRgbColorGsVb.setBackgroundHtmlColor("#000000");
+         fieldRgbColorTrpK.setBackgroundHtmlColor("#000000");
+         fieldRgbColorEinh.setBackgroundHtmlColor("#000000");
+
          fieldTextGsVb.setText("");
          fieldTextTrpK.setText("");
          fieldTextEinh.setText("");
@@ -130,9 +142,9 @@ public class EinheitenConfigPanel extends AbstractAdminOverviewPanel<EinheitDeta
       @Override
       public void setEditable(final boolean mode) {
          fieldName.setEditable(mode);
-         fieldRgbColorGsVb.setEditable(mode);
-         fieldRgbColorTrpK.setEditable(mode);
-         fieldRgbColorEinh.setEditable(mode);
+         fieldRgbColorGsVb.setEnabled(mode);
+         fieldRgbColorTrpK.setEnabled(mode);
+         fieldRgbColorEinh.setEnabled(mode);
          fieldTextGsVb.setEditable(mode);
          fieldTextTrpK.setEditable(mode);
          fieldTextEinh.setEditable(mode);
